--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/junitensho
 spring.datasource.username=postgres
 spring.datasource.password=ew2qmRKz
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
