環境変数を使用する形に変更

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=JuniTensho
 
 ## connect to database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/junitensho
-spring.datasource.username=postgres
-spring.datasource.password=ew2qmRKz
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
 
 spring.jpa.hibernate.ddl-auto=create-drop
